@@ -1,5 +1,5 @@
 /*
-$Header: /var/lib/cvsd/var/lib/cvsd/cspCalculator/src/html/styles/copyright.css,v 1.1 2013-11-28 23:41:12 timb Exp $
+$Header: /var/lib/cvsd/var/lib/cvsd/cspCalculator/src/html/styles/copyright.css,v 1.2 2013-11-29 00:16:39 timb Exp $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -25,5 +25,5 @@ div#copyrightDiv {
 	margin: 6px;
 	padding: 6px;
 	overflow: hidden;
-	background-color: grey;
+	background-color: #993399;
 }
