@@ -1,5 +1,5 @@
 /*
-$Header: /var/lib/cvsd/var/lib/cvsd/cspCalculator/src/html/styles/htmlEditor.css,v 1.1 2013-11-28 23:41:12 timb Exp $
+$Header: /var/lib/cvsd/var/lib/cvsd/cspCalculator/src/html/styles/htmlEditor.css,v 1.2 2013-11-29 00:16:39 timb Exp $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -24,6 +24,6 @@ div#htmlEditorDiv {
 	height: 50px;
 	margin: 6px;
 	padding: 6px;
-	background-color: silver;
 	overflow: hidden;
+	background-color: #9933cc;
 }
