@@ -8,6 +8,7 @@
   src/html/styles/htmlEditor.css
 * Updated src/html/examples/php/index.php to use new UI components and to
   allow for dynamic HTML body changes
+* Portcullis'ified the colours in the src/html/styles/*.css CSS files
 
 0.0 - 0.1
 
